--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,13 @@
-{
-	"language": "python",
-  	"group": "python3",
-    	"dist": "rpn.py",
-      	"os": "mac"
-}
+language: python
+python:
+  - "2.6"
+  - "2.7"
+  - "3.2"
+  - "3.3"
+  - "3.4# PyPy versions
+# command to install dependencies
+	install:
+	- pip install .
+	- pip install -r requirements.txt
+# command to run tests
+	script: rpn.py
