--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,13 @@
 {
-	language: python
+	language: python,
 	python:
   	- "2.6"
   	- "2.7"
   	- "3.2"
   	- "3.3"
-  	- "3.4"
-# command to install dependencies
+  	- "3.4",
 	install:
 	- pip install .
-	- pip install -r requirements.txt
-# command to run tests
+	- pip install -r requirements.txt,
 	script: rpn.py
 }
