--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,5 @@
 language: python
-python:
-	- "2.6"
-    	- "2.7"
-      	- "3.2"
-        - "3.3"
-	- "3.4"
-	- "3.5"
-	- "3.5-dev"
-	- "3.6"
-	- "3.6-dev"
-	- "3.7-dev" # 3.7 development branch
-	- "nightly" # currently points to 3.7-dev
-	- "pypy"
-	- "pypy3"
-	- "pypy-5.3.1"
+python: "3"
 # command to install dependencies
 	install: "pip install -r requirements.txt"
 # command to run tests
