--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,4 @@ python: "3.5"
 # command to install dependencies
 # install: "pip install -r requirements.txt"
 # command to run tests
-script: coverage run test_rpn.py
-script: coverage report -m
+script: python3 -m unittest
