--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,5 @@ python: "3.5"
 # command to install dependencies
 # install: "pip install -r requirements.txt"
 # command to run tests
-script: python3 -m unittest
+script: coverage run test_rpn.py
+after_script: coverage report -m
