--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: python
 python: "3.5"
 # command to install dependencies
-# install: "pip install -r requirements.txt"
+install: "pip install coveralls"
 # command to run tests
-script: python3 -m unittest
+script: coverage run test_rpn.py
+after_success: coveralls
